--- a/UrlProjectDemo/css/index.css
+++ b/UrlProjectDemo/css/index.css
@@ -14,16 +14,16 @@ div,img,span,label {
 
 #share_leftImage {
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 120px;
     height: 120px;
 }
 
 #share_rightImage {
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
     width: 118px;
     height: 39px;
 }
@@ -40,8 +40,8 @@ div,img,span,label {
 #share_rightIcon {
     position: absolute;
     z-index: 99;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
     width: 54px;
     height: 75px;
 }
@@ -50,25 +50,19 @@ div,img,span,label {
 #backview {
     position: absolute;
     background-color: transparent;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 #share_hworkInfo {
     border-radius: 5px;
     background-color: white;
-    margin-left: 18px;
-    margin-top: 18px;
-    margin-right: 18px;
-    margin-bottom: 10px;
+    margin: 18px 18px 10px;
 }
 
 #hworkInfo_hwTitle_div {
-    padding-top: 33px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 18px;
+    padding: 33px 40px 18px;
 }
 
 #hworkInfo_hwTitle {
@@ -148,15 +142,15 @@ div,img,span,label {
     height: 125px;
 }
 
-#hworkInfo_default label{
+.share_default_label {
     font-size: 14px;
     color: #A5A9AF;
-    font-family: NotoSansHans-Regular,sans-serif;
+    font-family: PingFangSC-Regular,sans-serif;
 }
 
 /*分割线*/
 #share_center_div {
-    height: 0px;
+    height: 1px;
 }
 
 #share_center_leftImage {
@@ -174,8 +168,24 @@ div,img,span,label {
     height: 39px;
     z-index: 99;
     top: -25px;
-    left: 70%;
+    left: 60%;
 }
+
+/*数据异常情况*/
+#share_networkError {
+    border-radius: 5px;
+    background-color: white;
+    margin: 18px 18px 10px;
+    height: 250px;
+    text-align: center;
+}
+
+#share_error_image {
+    margin-top: 52px;
+    width: 150px;
+    height: 125px;
+}
+
 /*提示步骤*/
 #share_step {
     border-radius: 5px;
@@ -218,7 +228,7 @@ div,img,span,label {
 #share_bottom {
     background-color: white;
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     height: 54px;
     width: 100%;
     font-size: 15px;
@@ -228,7 +238,7 @@ div,img,span,label {
 #bottom_span {
     background-color: white;
     position: absolute;
-    padding-left: 31px;
+    padding-left: 15px;
     height: 14px;
     top: 20px;
     line-height: 14px;
@@ -239,11 +249,41 @@ div,img,span,label {
     background-color: #05C1AE;
     border-radius: 5px;
     display: none;
-    outline:none;
+    /*outline:none;*/
     color: white;
     position: absolute;
-    right: 31px;
+    right: 15px;
     top: 8px;
-    width: 108px;
+    width: 100px;
     height: 38px;
+}
+
+/*蒙层*/
+#coverBackview {
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+    display: none;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    z-index:998;
+    /*pointer-events: none;*/
+}
+
+#cover_tipImage {
+    position:fixed;
+    right: 19px;
+    top: 5px;
+    width: 72px;
+    height: 119px;
+}
+
+#coverBackview span {
+    position:fixed;
+    left: 30px;
+    top: 105px;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: 14px;
+    color: #FFFFFF;
 }
