H5修改底部横线

--- a/UrlProjectDemo/css/index.css
+++ b/UrlProjectDemo/css/index.css
@@ -8,6 +8,10 @@ div,img,span,label {
     background-color: transparent;
 }
 
+html,body {
+    overflow: hidden;
+}
+
 .wrap {
     width: 100%;
 }
