--- a/UrlProjectDemo/css/index.css
+++ b/UrlProjectDemo/css/index.css
@@ -4,6 +4,12 @@
     margin: 0;
 }
 
+.index_body {
+    overflow-y: hidden;/*为了兼容普通PC的浏览器*/
+    height: 100%;
+    position: fixed;
+}
+
 div,img,span,label {
     background-color: transparent;
 }
