--- a/UrlProjectDemo/css/index.css
+++ b/UrlProjectDemo/css/index.css
@@ -5,7 +5,9 @@
 }
 
 .index_body {
-    overflow: hidden;/*为了兼容普通PC的浏览器*/
+    overflow-y: hidden;/*为了兼容普通PC的浏览器*/
+    height: 100%;
+    position: fixed;
 }
 
 div,img,span,label {
