--- a/UrlProjectDemo/css/index.css
+++ b/UrlProjectDemo/css/index.css
@@ -4,10 +4,10 @@
     margin: 0;
 }
 
-.index_body {
-    overflow-y: hidden;/*为了兼容普通PC的浏览器*/
-    height: 100%;
-}
+/*.index_body {*/
+    /*overflow-y: hidden;!*为了兼容普通PC的浏览器*!*/
+    /*height: 100%;*/
+/*}*/
 
 div,img,span,label {
     background-color: transparent;
