--- a/sharehomework/css/index.css
+++ b/sharehomework/css/index.css
@@ -227,7 +227,8 @@ div,img,span,label {
 /*底部按钮*/
 #share_bottom {
     background-color: white;
-    /*position: fixed;*/
+    position: fixed;
+    -webkit-transform: translateZ(0);
     bottom: 0;
     height: 54px;
     width: 100%;
