--- a/sharehomework/css/index.css
+++ b/sharehomework/css/index.css
@@ -55,6 +55,19 @@ div,img,span,label {
     top: 0;
     bottom: 0;
 }
+
+/*下载app的北京*/
+#share_downloadApp {
+    background-color: white;
+    position: fixed;
+    -webkit-transform: translateZ(0);
+    top: 0;
+    height: 54px;
+    width: 100%;
+    font-size: 15px;
+    font-family: PingFangSC-Regular, sans-serif;
+}
+
 #share_hworkInfo {
     border-radius: 5px;
     background-color: white;
